--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ html {
 }
 .tata {
   display: flex;
-  aspect-ratio: 1200 / 423;
+  aspect-ratio: 1200 / 350;
 }
 .open_content {
   display: flex;
@@ -214,7 +214,7 @@ html {
 .form {
   display: flex;
   width: 50%;
-  height: 80vw;
+  height: fit-content;
   padding: 1vh 1vw;
 }
 
@@ -261,9 +261,15 @@ input.txt {
   align-items: center;
 }
 
-#contact {
+#contact{
   display: flex;
+  flex-direction: column;
   align-items: center;
+}
+#contact > p{
+  padding: 3vw 2vw;
+  font-size: 1.8vw;
+  font-weight: 550;
 }
 
 label {
@@ -346,7 +352,7 @@ body {
   background-image: linear-gradient(135deg, #cd2a2a, #f11818ed);
 }
 
-.usluga {
+.usluga{
   width: 20rem;
   height: fit-content;
   margin: 0;
@@ -355,18 +361,18 @@ body {
   background-color: transparent;
 }
 
-.usluga > h4 {
+.usluga > h4{
   text-align: center;
   padding-top: 1rem;
-  font-size: 4vw;
+  font-size: 2rem;
 }
-.uslugeTxt {
+.uslugeTxt{
   visibility: visible;
   height: fit-content;
   margin: 0rem 1rem 1rem 1rem;
   transition: cubic-bezier(0.075, 0.82, 0.165, 1);
   transition-duration: 10ms;
-  font-size: 1vw;
+  font-size: 1rem;
   font-weight: 550;
   font-style: italic;
 }
@@ -389,6 +395,31 @@ body {
   font-weight: 550;
   font-size: 6vw;
 }
+
+.kratko_o_nama{
+  padding: 0 3vw;
+  display: flex;
+  flex-direction: row;
+  height: fit-content;
+  text-align: center;
+  font-size: larger;
+}
+
+#dugme{
+  display: flex;
+  padding: 3vw;
+  align-items: center;
+  justify-content: center;
+}
+
+#text{
+  width: 70%;
+}
+
+#text > p{
+  padding-top: 3vw;
+}
+
 
 @media (max-width: 730px) {
   .navbar_menu {
