--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,6 @@ html {
   background-color: transparent;
   width: 100%;
   height: 20vw;
-  font-size: 21px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -105,7 +104,7 @@ html {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-size: 1.5vw;
+  font-size: 2vw;
   height: 14vw;
   width: 50vw;
   float: left;
@@ -123,7 +122,7 @@ html {
   height: 50%;
   padding-left: 1vw;
   padding-bottom: 0.5vh;
-  font-size: 1.3vw;
+  font-size: 1.5vw;
   font-style: italic;
   color: white;
   line-height: 1.6;
@@ -134,7 +133,7 @@ html {
   padding-right: 1vw;
   padding-left: 2vw;
   padding-bottom: 0.5vh;
-  font-size: 1.3vw;
+  font-size: 1.5vw;
   font-style: italic;
   color: white;
   line-height: 1.6;
@@ -195,9 +194,12 @@ html {
   justify-content: center;
   align-items: center;
 }
-.pic {
+
+.pic{
   width: 100%;
 }
+
+
 .pic img {
   width: 100%;
   padding: 0 2vw;
@@ -205,6 +207,7 @@ html {
 .txt {
   font-size: 1.5rem;
   padding: 0 2vw;
+  border: 3px black solid;
 }
 
 .kontakt {
@@ -219,8 +222,8 @@ html {
 }
 
 #contactpic {
-  padding: 5vw;
-  width: 40vw;
+  padding: 2vw;
+  width: 25vw;
 }
 
 input.btn {
@@ -289,7 +292,7 @@ label:hover {
 table,
 th,
 td {
-  border: 1px solid #000000;
+  border: 5px solid #000000;
   text-align: center;
   padding: 0.2em;
   height: 4vw;
@@ -314,8 +317,7 @@ th:hover {
 .call {
   padding: 1vw;
   color: #f7b3b3;
-  font-size: 3vw;
-  font-weight: 600;
+  font-size: 2vw;
   font-style: italic;
 }
 .pdf {
@@ -335,6 +337,8 @@ th:hover {
   margin-left: 1vw;
 }
 .kontaktTxt {
+  display: flex;
+    align-items: center;
   color: #f7b3b3;
   font-size: 3vw;
 }
@@ -400,6 +404,7 @@ body {
   padding: 0 3vw;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   height: fit-content;
   text-align: center;
   font-size: larger;
@@ -413,11 +418,13 @@ body {
 }
 
 #text{
-  width: 70%;
+  width: 100%;
 }
 
 #text > p{
   padding-top: 3vw;
+  font-size: 1.5rem;
+  font-style: italic;
 }
 
 
@@ -453,6 +460,21 @@ body {
     font-size: 1rem;
     padding: 0 2vw;
   }
+.menu{
+  font-size: 2.5vw;
+}
+
+#address{
+  font-size: 2vw;
+}
+
+#mobile{
+  font-size: 2vw;
+}
+.footer{
+  height: 30vw;
+}
+
 }
 @media (max-width: 500px) {
   .button {
