--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,42 @@ html {
   color: #000000;
 }
 
+.sidebar{
+  position: absolute;
+  top: 80px;
+  right: 0px;
+  background-color: #000000;
+  width: 40%;
+  height: fit-content;
+  transition: 0.3s;
+  transform: translateX(200%);
+  z-index: 100;
+}
+
+.sidebar > ul{
+  padding: 0 0;
+  text-decoration: none;
+  list-style-type:none;
+}
+
+.sidebar >ul > li >a{
+  padding: 10px 20px;
+  color: #ffffff;
+  display: block;
+  border-bottom: 1px solid;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.showme{
+  transform: translateX(-0%);
+}
+
+.burger{
+  cursor: pointer;
+}
+
+
 .button {
   outline: none;
   border: none;
@@ -119,6 +155,7 @@ html {
   float: left;
 }
 #address {
+  cursor: pointer;
   height: 50%;
   padding-left: 1vw;
   padding-bottom: 0.5vh;
@@ -127,6 +164,23 @@ html {
   color: white;
   line-height: 1.6;
 }
+
+.mapa{
+  padding-top: 1rem;
+  display: flex;
+  justify-content: center;
+  right: 0px;
+  height: 0;
+  transition: 0.3s;
+  z-index: 100;
+}
+.mapa>img {
+  height: inherit;
+}
+
+.mapashowme{
+height: fit-content;}
+
 
 #mobile {
   height: 60%;
@@ -212,6 +266,8 @@ html {
 
 .kontakt {
   display: flex;
+  
+
 }
 
 .form {
@@ -223,7 +279,7 @@ html {
 
 #contactpic {
   padding: 2vw;
-  width: 25vw;
+  width: 30vw;
 }
 
 input.btn {
@@ -270,18 +326,18 @@ input.txt {
   align-items: center;
 }
 #contact > p{
-  padding: 3vw 2vw;
-  font-size: 1.8vw;
+  padding: 4vw 2vw;
+  font-size: 2vw;
   font-weight: 550;
 }
 
 label {
-  font-size: 1.5vw;
+  font-size: 2vw;
   font-weight: 600;
 }
 
 label:hover {
-  color: #cd2a2a;
+  color: white;
 }
 .cenovnik {
   display: flex;
@@ -333,7 +389,7 @@ th:hover {
   display: flex;
   justify-content: left;
   gap: 1vw;
-  flex-wrap: wrap;
+  
   margin-left: 1vw;
 }
 .kontaktTxt {
@@ -474,6 +530,20 @@ body {
 .footer{
   height: 30vw;
 }
+.kontakt{
+  flex-wrap: wrap;
+}
+.form{
+  width: 100%;
+}
+input.txt{
+  width: 80vw;
+}
+#napomena{
+  width: 80vw;
+}
+
+
 
 }
 @media (max-width: 500px) {
